--- a/nbs/00.ipynb
+++ b/nbs/00.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,14 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Construct a series of exploratory questions based on the meeting's objectives, key discussion points, and the roles of all participants. These questions should be designed to analyze the transcript for strategic insights, focusing on areas such as decision-making processes, implications of these decisions, actionable commitments made during the meeting, and how the topics discussed align with the organizational roles and interests, particularly with regard to Dmitry Grankin's position and responsibilities. The aim is to facilitate a deep understanding of the meeting's outcomes and its relevance to Dmitry Grankin's work, without directly addressing Dmitry Grankin in the questions.\n"
+      " first, provide chain of thought rational on the meeting context, objectioves and participants.\n",
+      "\n",
+      "Second, Construct a series of exploratory questions. \n",
+      "\n"
      ]
     }
    ],
@@ -49,25 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
    "source": [
     "\n",
     "%load_ext autoreload\n",
@@ -76,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,18 +75,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
-    "\n",
+    "import sys \n",
     "from audio.redis import *\n",
     "\n",
     "import redis\n",
     "from pathlib import Path\n",
-    "import torch\n",
-    "import torch.nn.functional as F\n"
+    "try:\n",
+    "    import torch\n",
+    "    import torch.nn.functional as F\n",
+    "\n",
+    "except:\n",
+    "    pass\n",
+    "import csv\n",
+    "from datetime import datetime\n",
+    "import os\n"
    ]
   },
   {
@@ -138,6 +132,43 @@
     "    \"\"\"\n",
     "    p = Path(path)\n",
     "    return [entry for entry in p.iterdir()]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "\n",
+    "def log(*args,file_path=None):\n",
+    "    \"\"\"\n",
+    "    Logs the provided arguments into a CSV file along with a current timestamp.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - file_path: str, the path to the CSV file where data should be logged. Defaults to 'log.csv' in the current directory.\n",
+    "    - *args: variable length argument list, the data to log in the CSV.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Get the current timestamp\n",
+    "    now = datetime.now()\n",
+    "    timestamp = now.strftime('%Y-%m-%d %H:%M:%S')\n",
+    "\n",
+    "    if file_path is None:\n",
+    "        script_name = os.path.basename(sys.argv[0])\n",
+    "        if script_name.endswith('.py'):\n",
+    "            script_name = script_name[:-3]  # Remove .py extension\n",
+    "        file_path = f\"logs/{script_name}_log.csv\"\n",
+    "\n",
+    "    # Open the CSV file and append the new row\n",
+    "    with open(file_path, mode='a', newline='') as file:\n",
+    "        writer = csv.writer(file)\n",
+    "        # Add the timestamp as the first item in the row, followed by the provided arguments\n",
+    "        writer.writerow([timestamp] + list(args))\n",
+    "\n",
+    "    print([timestamp] + list(args))"
    ]
   },
   {
@@ -509,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.undefined.undefined"
   }
  },
  "nbformat": 4,
