--- a/nbs/00_audio.ipynb
+++ b/nbs/00_audio.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,18 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.10/dist-packages/pydub/utils.py:170: RuntimeWarning: Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\n",
-      "  warn(\"Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\", RuntimeWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| export\n",
     "import asyncio\n",
@@ -48,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +115,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "\n",
+    "class AudioSlicer:\n",
+    "    def __init__(self, data=None, format=\"mp3\"):\n",
+    "        self.format = format\n",
+    "        self.audio = AudioSegment.from_file(io.BytesIO(data), format=format) if data is not None else None\n",
+    "\n",
+    "    \n",
+    "    @classmethod\n",
+    "    async def from_file(cls, file_path, format=\"mp3\"):\n",
+    "        def read_file(file_path):\n",
+    "            with open(file_path, \"rb\") as file:\n",
+    "                return file.read()\n",
+    "\n",
+    "        data = await asyncio.to_thread(read_file, file_path)\n",
+    "        return cls(data, format)\n",
+    "    \n",
+    "\n",
+    "    @classmethod\n",
+    "    async def from_ffmpeg_slice(cls, path, start, duration, format=\"mp3\"):\n",
+    "        def slice_and_get_data(path, start, duration):\n",
+    "            command = ['ffmpeg', '-ss', str(start), '-t', str(duration),\n",
+    "                       '-i', path, '-f', format, '-acodec', 'libmp3lame', '-']\n",
+    "            result = subprocess.run(command, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+    "            return result.stdout\n",
+    "\n",
+    "        data = await asyncio.to_thread(slice_and_get_data, path, start, duration)\n",
+    "        return cls(data, format)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "    async def export2file(self, export_path, start=None, end=None):\n",
+    "        def export(segment, export_path):\n",
+    "            segment.export(export_path, format=self.format)\n",
+    "\n",
+    "        segment = self.slice(start, end)\n",
+    "        await asyncio.to_thread(export, segment, export_path)\n",
+    "\n",
+    "    async def export_data(self, start=None, end=None,format='mp3'):\n",
+    "        def export(segment, buffer):\n",
+    "            segment.export(buffer, format=format)\n",
+    "            return buffer.getvalue()\n",
+    "\n",
+    "        segment = self.slice(start, end)\n",
+    "        buffer = io.BytesIO()\n",
+    "        return await asyncio.to_thread(export, segment, buffer)\n",
+    "\n",
+    "    # slice remains synchronous as it's a simple in-memory operation\n",
+    "    def slice(self, start=None, end=None):\n",
+    "\n",
+    "        if start is not None:\n",
+    "            start_millis = start * 1000\n",
+    "            end_millis = end * 1000\n",
+    "            audio = self.audio[start_millis:end_millis]\n",
+    "        else:\n",
+    "            print(start)\n",
+    "            audio = self.audio\n",
+    "\n",
+    "        return audio\n",
+    "    \n",
+    "    async def append(self, additional_data):\n",
+    "        def append_(additional_data):\n",
+    "            new_segment = AudioSegment.from_file(io.BytesIO(additional_data), format=self.format)\n",
+    "            self.audio += new_segment\n",
+    "\n",
+    "        await asyncio.to_thread(append_, additional_data)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,6 +207,294 @@
     "            with open(path, 'ab') as file:\n",
     "                # Write data to the file\n",
     "                file.write(chunk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "Path.ls = lambda self: list(self.iterdir())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = Path('/audio').ls()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a =await AudioSlicer.from_file(path,  format='webm')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def audio_len(path):\n",
+    "    try:\n",
+    "        audio = await AudioSlicer.from_file(path,  format='webm')\n",
+    "        return len(audio.audio)/1000\n",
+    "    except:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_lengths = [await audio_len(path) for path in  Path('/audio').ls()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "400590.89999999997"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(file_lengths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1955562/4080736814.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(file_lengths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>308.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1300.619805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1526.039979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>698.430000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95%</th>\n",
+       "      <td>3977.943000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>8863.020000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 0\n",
+       "count   308.000000\n",
+       "mean   1300.619805\n",
+       "std    1526.039979\n",
+       "min       0.000000\n",
+       "50%     698.430000\n",
+       "95%    3977.943000\n",
+       "max    8863.020000"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(percentiles=[0.95])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    400590.9\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5000.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "300000/60"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "100/5000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    305711.1\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[0]<3977].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "308"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(file_lengths)"
    ]
   },
   {
@@ -376,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
