--- a/diarizetests.ipynb
+++ b/diarizetests.ipynb
@@ -2,69 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.insert(0,'../library')\n",
     "\n",
-    "import pandas as pd\n",
-    "from audio.audio import AudioSlicer\n",
-    "import uuid\n",
-    "from vexa.tools import log\n",
-    "from vexa.redis import get_redis\n",
-    "import  vexa.streamapipy as stream\n",
-    "from dotenv import load_dotenv\n",
-    "import os\n",
-    "\n",
-    "import httpx\n",
-    "import asyncio\n",
-    "import os\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "from audio.redis import *\n",
-    "from audio.audio import *\n",
-    "#from audio.process import *\n",
-    "\n",
-    "from pathlib import Path\n",
-    "import json\n",
-    "\n",
-    "import uuid\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "import asyncio\n",
-    "import redis.asyncio as aioredis\n",
-    "from dataclasses import dataclass\n",
-    "import numpy as np\n",
-    "\n",
-    "import json\n",
-    "import time\n",
-    "\n",
-    "\n",
-    "import subprocess\n",
-    "from pydub import AudioSegment\n",
-    "import io\n",
-    "from time import sleep\n",
-    "from audio.redis import Audio,Transcript,Diarisation\n",
-    "\n",
-    "\n",
-    "\n",
-    "load_dotenv()\n",
-    "STREAM_API_PORT = os.getenv('STREAM_API_PORT')\n",
-    "DATA_PATH = os.getenv('DATA_PATH')\n",
-    "SERVICE_TOKEN = os.getenv('SERVICE_TOKEN')\n",
-    "\n",
-    "\n",
-    "running_tasks = set()"
+    "%load_ext autoreload\n",
+    "%autoreload 2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,107 +26,32 @@
     }
    ],
    "source": [
-    "from qdrant_client import QdrantClient, models\n",
-    "from uuid import uuid4\n",
-    "from pyannote.audio import Pipeline\n",
-    "import io\n",
-    "import pandas as pd\n",
-    "from audio.redis import *\n",
     "import asyncio\n",
-    "import torch\n",
+    "import io\n",
     "import json\n",
+    "import logging\n",
+    "from datetime import datetime, timezone\n",
+    "from uuid import uuid4\n",
     "\n",
-    "import sys\n",
-    "sys.path.insert(0,'../library')\n",
-    "from vexa.tools import log\n",
-    "from vexa.redis import get_redis\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "from pyannote.audio import Pipeline\n",
+    "from qdrant_client import QdrantClient, models\n",
     "\n",
-    "client = QdrantClient(\"qdrant\",timeout=10)\n",
-    "#client = QdrantClient(\"host.docker.internal\",timeout=10,port=6333)\n",
-    "\n",
-    "def get_stored_knn(emb:list, client_id):\n",
-    "    search_result = client.search(\n",
-    "        collection_name='main', \n",
-    "        query_vector=emb, \n",
-    "        limit=1,\n",
-    "        query_filter=models.Filter(\n",
-    "        must=[\n",
-    "            models.FieldCondition(\n",
-    "                key=\"client_id\",\n",
-    "                match=models.MatchValue(\n",
-    "                    value=client_id,\n",
-    "                ),\n",
-    "            )\n",
-    "        ]\n",
-    "    ),  \n",
-    "        )\n",
-    "    if len(search_result)>0:\n",
-    "        search_result = search_result[0]\n",
-    "        return search_result.payload['speaker_id'], search_result.score\n",
-    "    else: return None,None\n",
-    "\n",
-    "\n",
-    "async def add_new_speaker_emb(emb:list,redis_client, client_id,speaker_id=None):\n",
-    "    log('adding new speaker')\n",
-    "    speaker_id = speaker_id if speaker_id else str(uuid4())\n",
-    "\n",
-    "    client.upsert(\n",
-    "        collection_name='main',\n",
-    "        wait=True,\n",
-    "        points=[models.PointStruct(id=str(uuid4()), vector=emb,payload={'speaker_id':speaker_id,'client_id':client_id})]\n",
-    "\n",
-    "    )\n",
-    "\n",
-    "    await redis_client.lpush('Embeddings', json.dumps((speaker_id,emb.tolist(), client_id)))\n",
-    "    \n",
-    "    return speaker_id\n",
-    "\n",
-    "\n",
-    "\n",
-    "async def process_speaker_emb(emb:list,redis_client, client_id):\n",
-    "    speaker_id, score = get_stored_knn(emb, client_id)\n",
-    "    log(score)\n",
-    "    if speaker_id:\n",
-    "        if score > 0.95:\n",
-    "            pass\n",
-    "        elif score > 0.75:\n",
-    "            await add_new_speaker_emb(emb,redis_client, client_id,speaker_id=speaker_id)\n",
-    "        else:\n",
-    "            speaker_id = await add_new_speaker_emb(emb,redis_client, client_id)\n",
-    "    else:\n",
-    "        speaker_id = await add_new_speaker_emb(emb,redis_client, client_id)\n",
-    "\n",
-    "    return str(speaker_id), score\n",
-    "\n",
-    "\n",
-    "def parse_segment(segment):\n",
-    "    return segment[0].start, segment[0].end,int(segment[-1].split('_')[1])\n",
-    "\n",
-    "async def process(redis_client):\n",
-    "    try:\n",
-    "        _,item = await redis_client.brpop('Audio2DiarizeQueue')\n",
-    "        log('here')\n",
-    "        audio_name,client_id = item.split(':')\n",
-    "        audio = Audio(audio_name,redis_client)\n",
-    "        if await audio.get():\n",
-    "            output, embeddings = pipeline(io.BytesIO(audio.data), return_embeddings=True)\n",
-    "            log()\n",
-    "            if len(embeddings)==0: audio.delete()\n",
-    "        else:\n",
-    "            assert 'no audio'\n",
-    "        if output and embeddings:\n",
-    "            speakers =[await process_speaker_emb(e,redis_client, client_id) for e in embeddings]\n",
-    "            segments = [i for i in output.itertracks(yield_label=True)]\n",
-    "            df = pd.DataFrame([parse_segment(s) for s in segments],columns = ['start','end','speaker_id'])\n",
-    "            df['speaker'] = df['speaker_id'].replace({i:s[0] for i,s in enumerate(speakers)})\n",
-    "            df['score'] = df['speaker_id'].replace({i:s[1] for i,s in enumerate(speakers)})\n",
-    "            diarization_data = df.drop(columns=['speaker_id']).to_dict('records')\n",
-    "            await Diarisation(audio_name,redis_client,diarization_data).save()\n",
-    "            await redis_client.lpush(f'DiarizeReady:{audio_name}', 'Done')\n",
-    "            log('done')\n",
-    "    except Exception as e:\n",
-    "        log(e)\n",
-    "        await redis_client.rpush('Audio2DiarizeQueue', f'{audio_name}:{client_id}')"
+    "from app.database_redis import keys\n",
+    "from app.database_redis.connection import get_redis_client\n",
+    "from app.services.audio.audio import AudioSlicer\n",
+    "from app.services.audio.redis import Diarisation, Diarizer, Meeting, best_covering_connection\n",
+    "from app.settings import settings\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = QdrantClient(\"qdrant\", timeout=10)"
    ]
   },
   {
@@ -186,7 +60,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "redis_client = await get_redis(host='redis',port=6379)"
+    "\n",
+    "def get_stored_knn(emb: list, user_id):\n",
+    "    search_result = client.search(\n",
+    "        collection_name=\"main\",\n",
+    "        query_vector=emb,\n",
+    "        limit=1,\n",
+    "        query_filter=models.Filter(\n",
+    "            must=[models.FieldCondition(key=\"user_id\", match=models.MatchValue(value=user_id))]\n",
+    "        ),\n",
+    "    )\n",
+    "    if len(search_result) > 0:\n",
+    "        search_result = search_result[0]\n",
+    "        return search_result.payload[\"speaker_id\"], search_result.score\n",
+    "    else:\n",
+    "        return None, None\n",
+    "\n",
+    "\n",
+    "async def add_new_speaker_emb(emb: list, redis_client, user_id, speaker_id=None):\n",
+    "    logger.info(\"Adding new speaker...\")\n",
+    "    speaker_id = speaker_id if speaker_id else str(uuid4())\n",
+    "    client.upsert(\n",
+    "        collection_name=\"main\",\n",
+    "        wait=True,\n",
+    "        points=[\n",
+    "            models.PointStruct(id=str(uuid4()), vector=emb, payload={\"speaker_id\": speaker_id, \"user_id\": user_id})\n",
+    "        ],\n",
+    "    )\n",
+    "    await redis_client.lpush(keys.SPEAKER_EMBEDDINGS, json.dumps((speaker_id, emb.tolist(), user_id)))\n",
+    "    logger.info(f\"Added new speaker {speaker_id}\")\n",
+    "    return speaker_id\n",
+    "\n",
+    "\n",
+    "async def process_speaker_emb(emb: list, redis_client, user_id):\n",
+    "    speaker_id, score = get_stored_knn(emb, user_id)\n",
+    "    logger.info(f\"score: {score}\")\n",
+    "\n",
+    "    if speaker_id:\n",
+    "        if score > 0.95:\n",
+    "            pass\n",
+    "        elif score > 0.75:\n",
+    "            await add_new_speaker_emb(emb, redis_client, user_id, speaker_id=speaker_id)\n",
+    "        else:\n",
+    "            speaker_id = await add_new_speaker_emb(emb, redis_client, user_id)\n",
+    "    else:\n",
+    "        speaker_id = await add_new_speaker_emb(emb, redis_client, user_id)\n",
+    "\n",
+    "    return str(speaker_id), score\n",
+    "\n",
+    "\n",
+    "def parse_segment(segment):\n",
+    "    return segment[0].start, segment[0].end, int(segment[-1].split(\"_\")[1])\n",
+    "\n",
+    "\n",
+    "async def __get_next_chunk_start(diarization_result, length, shift):\n",
+    "\n",
+    "    if len(diarization_result) > 0:\n",
+    "        last_speech = diarization_result[-1]\n",
+    "\n",
+    "        ended_silence = length - last_speech[\"end\"]\n",
+    "        logger.info(ended_silence)\n",
+    "        if ended_silence < 2:\n",
+    "            logger.info(\"interrupted\")\n",
+    "            return last_speech[\"start\"] + shift\n",
+    "\n",
+    "        else:\n",
+    "            logger.info(\"non-interrupted\")\n",
+    "            return last_speech[\"end\"] + shift\n",
+    "\n",
+    "    else:\n",
+    "        return None\n"
    ]
   },
   {
@@ -195,27 +138,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_,item = await redis_client.brpop('Audio2DiarizeQueue')"
+    "redis_client = await get_redis_client(settings.redis_host, settings.redis_port, settings.redis_password)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'fc7ed3bb-e7fa-48a5-8c2e-2bc435fb5512:1'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "item"
+    "diarizer = Diarizer(redis_client)\n",
+    "meeting_id = await diarizer.pop_inprogress()"
    ]
   },
   {
@@ -224,76 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "audio_name,client_id = item.split(':')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "audio = Audio(audio_name,redis_client)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "await audio.get()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "torchvision is not available - cannot save figures\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<pyannote.audio.pipelines.speaker_diarization.SpeakerDiarization at 0x7f9386f47e50>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "pipeline = Pipeline.from_pretrained(\n",
-    "    \"pyannote/speaker-diarization-3.1\",\n",
-    "    use_auth_token=\"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\")\n",
-    "pipeline.to(torch.device(\"cuda\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output, embeddings = pipeline(io.BytesIO(audio.data), return_embeddings=True)"
+    "meeting_id"
    ]
   },
   {
@@ -303,58 +167,43 @@
    "outputs": [],
    "source": [
     "\n",
-    "audio_name,client_id = item.split(':')\n",
-    "audio = Audio(audio_name,redis_client)\n",
-    "if await audio.get():\n",
-    "    output, embeddings = pipeline(io.BytesIO(audio.data), return_embeddings=True)\n",
-    "    log()\n",
-    "    if len(embeddings)==0: audio.delete()\n",
-    "else:\n",
-    "    assert 'no audio'\n",
-    "if output and embeddings:\n",
-    "    speakers =[await process_speaker_emb(e,redis_client, client_id) for e in embeddings]\n",
-    "    segments = [i for i in output.itertracks(yield_label=True)]\n",
-    "    df = pd.DataFrame([parse_segment(s) for s in segments],columns = ['start','end','speaker_id'])\n",
-    "    df['speaker'] = df['speaker_id'].replace({i:s[0] for i,s in enumerate(speakers)})\n",
-    "    df['score'] = df['speaker_id'].replace({i:s[1] for i,s in enumerate(speakers)})\n",
-    "    diarization_data = df.drop(columns=['speaker_id']).to_dict('records')\n",
-    "    await Diarisation(audio_name,redis_client,diarization_data).save()\n",
-    "    await redis_client.lpush(f'DiarizeReady:{audio_name}', 'Done')\n",
-    "    log('done')\n",
-    "except Exception as e:\n",
-    "log(e)\n",
-    "await redis_client.rpush('Audio2DiarizeQueue', f'{audio_name}:{client_id}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "if not meeting_id:\n",
+    "    return\n",
     "\n",
-    "    try:\n",
-    "        while True:\n",
-    "            await process(redis_client)\n",
-    "    except KeyboardInterrupt:\n",
-    "        pass \n",
-    "    finally:\n",
-    "        redis_client.close()\n",
-    "      #  await redis_client.wait_closed()\n",
+    "meeting = Meeting(redis_client, meeting_id)\n",
+    "await meeting.load_from_redis()\n",
+    "seek = meeting.diarize_seek_timestamp - meeting.start_timestamp\n",
     "\n",
+    "current_time = datetime.now(timezone.utc)\n",
     "\n",
-    "if __name__ == '__main__':\n",
+    "connection = best_covering_connection(seek, current_time, meeting.get_connections())\n",
+    "audio_slicer = await AudioSlicer.from_ffmpeg_slice(f\"/audio/{connection.id}.webm\", seek, seek + max_length)\n",
+    "slice_duration = audio_slicer.audio.duration_seconds\n",
+    "audio_data = await audio_slicer.export_data()\n",
     "\n",
+    "output, embeddings = pipeline(io.BytesIO(audio_data), return_embeddings=True)\n",
     "\n",
-    "    pipeline = Pipeline.from_pretrained(\n",
-    "        \"pyannote/speaker-diarization-3.1\",\n",
-    "        use_auth_token=\"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\")\n",
-    "    pipeline.to(torch.device(\"cuda\"))\n",
-    "                               \n",
-    "                               \n",
+    "if len(embeddings) == 0:\n",
+    "    logger.info(\"No embeddings found, skipping...\")\n",
+    "    return\n",
     "\n",
+    "speakers = [await process_speaker_emb(e, redis_client, connection.user_id) for e in embeddings]\n",
     "\n",
-    "    asyncio.run(main())\n"
+    "segments = [i for i in output.itertracks(yield_label=True)]\n",
+    "df = pd.DataFrame([parse_segment(s) for s in segments], columns=[\"start\", \"end\", \"speaker_id\"])\n",
+    "df[\"speaker\"] = df[\"speaker_id\"].replace({i: s[0] for i, s in enumerate(speakers)})\n",
+    "df[\"score\"] = df[\"speaker_id\"].replace({i: s[1] for i, s in enumerate(speakers)})\n",
+    "result = df.drop(columns=[\"speaker_id\"]).to_dict(\"records\")\n",
+    "\n",
+    "diarization = Diarisation(meeting_id, redis_client, result)\n",
+    "await diarization.lpush()\n",
+    "\n",
+    "start_ = await __get_next_chunk_start(result, slice_duration, current_time - seek)\n",
+    "seek = start_+current_time if start_ else seek + slice_duration\n",
+    "\n",
+    "meeting.diarize_seek_timestamp = seek\n",
+    "await diarizer.remove(meeting.meeting_id)\n",
+    "await meeting.update_redis()"
    ]
   }
  ],
