--- a/tests_2305.ipynb
+++ b/tests_2305.ipynb
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_23588/4266564517.py:12: DeprecationWarning: \n",
+      "/tmp/ipykernel_76336/4266564517.py:12: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,6 +193,290 @@
     "        break\n",
     "    new_transcriptions.append(json.loads(d))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def get_next_seek(result,seek):\n",
+    "\n",
+    "    df = pd.DataFrame(result)[[2,3,4]]\n",
+    "    df.columns = ['start','end','speech']\n",
+    "    df['start'] = pd.to_timedelta(df['start'],unit='s') + pd.Timestamp(seek)\n",
+    "    df['end'] = pd.to_timedelta(df['end'],unit='s') + pd.Timestamp(seek)\n",
+    "\n",
+    "    if len(result) > 0:\n",
+    "        return df.iloc[-1]['start']\n",
+    "\n",
+    "    else:\n",
+    "        return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2024-05-23T17:26:49.942470+00:00'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_transcriptions[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2024-05-23 17:26:57.012470+0000', tz='UTC')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_next_seek(new_transcriptions[0][0],new_transcriptions[0][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_transcriptions[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wefwef"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 378,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'7c2f45d9-8e74-4c78-b76a-acc4de8011fd'"
+      ]
+     },
+     "execution_count": 378,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_transcriptions[-1][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[new_transcriptions]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 380,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for t,seek,connection_id in new_transcriptions:\n",
+    "    df = pd.DataFrame(t)[[2,3,4]]\n",
+    "    df.columns = ['start','end','speech']\n",
+    "    df['start'] = pd.to_timedelta(df['start'],unit='s') + pd.Timestamp(seek)\n",
+    "    df['end'] = pd.to_timedelta(df['end'],unit='s') + pd.Timestamp(seek)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 382,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2024-05-23 17:14:34.567686+0000', tz='UTC')"
+      ]
+     },
+     "execution_count": 382,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[-1]['start']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_transcriptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = new_transcriptions[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>390</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>Давай ещё посмотрим.</td>\n",
+       "      <td>[50365, 29196, 13993, 42293, 13, 50560]</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.372768</td>\n",
+       "      <td>0.822222</td>\n",
+       "      <td>0.016266</td>\n",
+       "      <td>[[2.1, 2.72,  Давай, 0.8212890625], [2.72, 2.98,  ещё, 0.54296875], [2.98, 3.4,  посмотрим., 0.99560546875]]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0    1    2    3                      4   \\\n",
+       "0   1  390  2.1  3.4   Давай ещё посмотрим.   \n",
+       "\n",
+       "                                        5    6         7         8         9   \\\n",
+       "0  [50365, 29196, 13993, 42293, 13, 50560]  0.0 -0.372768  0.822222  0.016266   \n",
+       "\n",
+       "                                                                                                             10  \n",
+       "0  [[2.1, 2.72,  Давай, 0.8212890625], [2.72, 2.98,  ещё, 0.54296875], [2.98, 3.4,  посмотрим., 0.99560546875]]  "
+      ]
+     },
+     "execution_count": 316,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' Побольше результатов немножко за 5 секунд.'"
+      ]
+     },
+     "execution_count": 296,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[0][-1][4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if len(result) > 0:\n",
+    "        last_speech = result[-1]\n",
+    "\n",
+    "        ended_silence = length - last_speech[\"end\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
