--- a/tests_2305.ipynb
+++ b/tests_2305.ipynb
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_76336/4266564517.py:12: DeprecationWarning: \n",
+      "/tmp/ipykernel_493/4266564517.py:12: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,12 +196,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with open('mocks/transcriptions.json', 'w') as f:\n",
+    "#     f.write(json.dumps(new_transcriptions))\n",
+    "# with open('mocks/diarizations.json', 'w') as f:\n",
+    "#     f.write(json.dumps(new_diarizations))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_next_seek(result,seek):\n",
     "\n",
     "    df = pd.DataFrame(result)[[2,3,4]]\n",
@@ -218,16 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2024-05-23T17:26:49.942470+00:00'"
+       "'2024-05-23T17:27:59.229398+00:00'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,69 +257,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Timestamp('2024-05-23 17:26:57.012470+0000', tz='UTC')"
+       "Timestamp('2024-05-23 17:28:08.119398+0000', tz='UTC')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "get_next_seek(new_transcriptions[0][0],new_transcriptions[0][1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_transcriptions[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wefwef"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 378,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'7c2f45d9-8e74-4c78-b76a-acc4de8011fd'"
-      ]
-     },
-     "execution_count": 378,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_transcriptions[-1][2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[new_transcriptions]"
    ]
   },
   {
