--- a/audio_processing_research/03.ipynb
+++ b/audio_processing_research/03.ipynb
@@ -424,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "2.7.undefined"
   }
  },
  "nbformat": 4,
