--- a/app/nbs/02_redis.ipynb
+++ b/app/nbs/02_redis.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,28 +29,22 @@
     "    host=\"redis\",  # Replace with your Redis host\n",
     "    port=6379,        # Replace with your Redis port\n",
     "    password='your_redis_password',    # Replace with your Redis password if any\n",
-    "    db=0             # Replace with your Redis DB number\n",
+    "    db=1             # Replace with your Redis DB number\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['meeting:the-zdjv-byg:metadata',\n",
-       " 'transcribe:todo',\n",
-       " 'connection:2490f037-c1f5-4051-96c9-b9217bcf4700',\n",
-       " 'speaker_data',\n",
-       " 'transcribe:in_progress',\n",
-       " 'meeting:the-zdjv-byg:connections',\n",
-       " 'initialFeed_audio:2490f037-c1f5-4051-96c9-b9217bcf4700']"
+       "['token_user_map', 'user_enable_status_map']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
